# talk2Py

./: .gitignore  README.md  gen-env.sh  makefile  pyproject.toml
.cursor/rules/: instructions.mdc  python_code_structure_instructions.mdc
docs/: design.md  requirements.md
examples/calculator/: calculator.py
examples/todo_list/: __init__.py  todo_list.py
insights/: coding_insights.md
talk2py/: __init__.py  chat_context.py  command_executor.py  command_parser.py  command_registry.py  default_param_extraction.py  default_response_generation.py  default_utterance_impl.py  nlu_engine_interfaces.py  registry_cache.py  types.py  utterances.py
talk2py/add_nlu_interfaces/: __main__.py
talk2py/code_parsing/: command_parser.py  command_registry.py
talk2py/code_parsing_execution/: command_executor.py  command_parser.py  command_registry.py
talk2py/create/: __main__.py
talk2py/manage_nlu_overrides/: __init__.py  __main__.py
talk2py/nlu_pipeline/: __init__.py  chat_context_extensions.py  default_intent_detection.py  default_param_extraction.py  interaction_models.py  (+7 more)
tests/: __init__.py  conftest.py  test_chat_context.py  test_chat_context_session.py  test_command_executor.py  test_command_executor_advanced.py  test_command_parser.py  test_command_registry.py  test_create_main.py  test_default_intent_detection_impl.py  test_default_response_gen_impl.py  test_default_utterance_impl.py  test_nlu_interface_cli.py  test_nlu_interface_manager.py  test_nlu_overrides_manager.py  test_nlu_overrides_manager_cli.py  test_nlu_pipeline_integration.py  test_registry_cache.py
(+12 files in other folders)
